// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableRow should render 1`] = `
<tr
  data-name={1}
>
  <th>
    <div
      className="monster-label inline"
    >
      <span
        className="monster-label--name"
      >
        Bear
      </span>
    </div>
    <div
      className="base-link-group nice-btn-group"
    >
      <a
        className="cursor-pointer nice-btn-alt icon fa-eye"
        href={undefined}
        onClick={[Function]}
      >
        View
      </a>
      <a
        className="cursor-pointer nice-btn-alt icon fa-pencil"
        href={undefined}
        onClick={[Function]}
      >
        Edit
      </a>
      <a
        className="cursor-pointer nice-btn-alt icon fa-clone"
        onClick={[Function]}
      >
        Copy
      </a>
      <a
        className="cursor-pointer nice-btn-alt icon fa-trash-o bad"
        onClick={[Function]}
      >
        Delete
      </a>
    </div>
  </th>
  <td>
    <div
      className="monster-label inline"
    >
      <span
        className="monster-label--type"
      />
    </div>
  </td>
  <td>
    <div
      className="monster-label inline"
    >
      <span
        className="monster-label--rating"
      >
        <div
          className="challenge-rating inline"
        >
          CR 
          ¼
        </div>
         / 
        <div
          className="xp-rating inline"
        >
          10
           XP
        </div>
      </span>
    </div>
  </td>
  <td>
    <div
      className="monster-label inline"
    />
  </td>
</tr>
`;

exports[`TableRow should render with campaign 1`] = `
<tr
  data-name={1}
>
  <th>
    <div
      className="monster-label inline"
    >
      <span
        className="monster-label--name"
      >
        Bear
      </span>
    </div>
    <div
      className="base-link-group nice-btn-group"
    >
      <a
        className="cursor-pointer nice-btn-alt icon fa-eye"
        href={undefined}
        onClick={[Function]}
      >
        View
      </a>
      <a
        className="cursor-pointer nice-btn-alt icon fa-pencil"
        href={undefined}
        onClick={[Function]}
      >
        Edit
      </a>
      <a
        className="cursor-pointer nice-btn-alt icon fa-clone"
        onClick={[Function]}
      >
        Copy
      </a>
      <a
        className="cursor-pointer nice-btn-alt icon fa-trash-o bad"
        onClick={[Function]}
      >
        Delete
      </a>
    </div>
  </th>
  <td>
    <div
      className="monster-label inline"
    >
      <span
        className="monster-label--type"
      />
    </div>
  </td>
  <td>
    <div
      className="monster-label inline"
    >
      <span
        className="monster-label--rating"
      >
        <div
          className="challenge-rating inline"
        >
          CR 
          ¼
        </div>
         / 
        <div
          className="xp-rating inline"
        >
          10
           XP
        </div>
      </span>
    </div>
  </td>
  <td>
    <div
      className="monster-label inline"
    >
      <span
        className="monster-label--campaign"
      >
        <div
          className="campaign-label inline"
        >
          Circus
        </div>
      </span>
    </div>
  </td>
</tr>
`;
